// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox must return the diff between snapshot when checkbox has a defined value or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,11 +6,10 @@
      id="bar"
      name="bar"
      onChange={[Function anonymous]}
      required={false}
      type="checkbox"
-     value="qux"
    />
    <CheckboxLabelStyle
      htmlFor="bar"
      isBlack={false}
      noFontSizeChange={false}
`;

exports[`CheckBox must return the diff between snapshot when checkbox is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
      checked={false}
      hidden={true}
      id="bar"
      name="bar"
      onChange={[Function anonymous]}
-     required={true}
+     required={false}
      type="checkbox"
    />
    <CheckboxLabelStyle
      htmlFor="bar"
      isBlack={false}
`;
